--- a/src/Components/HeroStyles.css
+++ b/src/Components/HeroStyles.css
@@ -6,7 +6,7 @@
 
 .hero-mid {
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   position: relative;
 }
 
@@ -32,7 +32,7 @@ img {
   font-size: 3rem;
   font-weight: 800;
   background: #fff;
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .hero-text p {
