--- a/src/Components/AboutUsStyles.css
+++ b/src/Components/AboutUsStyles.css
@@ -2,14 +2,12 @@
   margin: 4rem 6rem;
   text-align: start;
 }
-.about-container
-  h1(
-    padding-bottom: 2rem;
-)
-  @media
-  screen
-  and
-  (amx-width:850px) {
+
+.about-container h1 {
+  padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 850px) {
   .about-container {
     margin: 4rem 2rem;
   }
