--- a/src/Pages/clientLoginStyle.css
+++ b/src/Pages/clientLoginStyle.css
@@ -8,7 +8,7 @@
     height: 100vh;
 }
 
-form {
+.client-login-container .login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,22 +18,22 @@ form {
     border-radius: 4px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
-/* 
-h1 {
+ 
+.client-login-container h1 {
     position: absolute;
     top: 20px;
     left: 20px;
-    font-size: 24px;
+    font-size: 50px;
     font-weight: bold;
 
-} */
+}
 
-/* label {
+.client-login-container .login-label {
     margin-bottom: 5px;
     font-weight: bold;
-} */
+}
 
-input {
+.client-login-container .login-input {
     margin-bottom: 10px;
     padding: 5px;
     border: 1px solid #ccc;
@@ -43,7 +43,7 @@ input {
     font-size: 14px;
 }
 
-button {
+.client-login-container .login-btn {
     padding: 5px 10px;
     background-color: #000;
     color: #fff;
