--- a/src/Components/ContactForm.css
+++ b/src/Components/ContactForm.css
@@ -1,12 +1,12 @@
 section{
-  background-image: url('../assets/6.jpg');
+  background-image: url('../assets/2.jpg');
   /*background-color: #333  ;*/
-  background-position: center;
+  background-position: fill;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 110vh;
   width: 100%;
 
 }
@@ -14,7 +14,7 @@ section{
   position: relative;
   display: flex;
   width: 420px;
-  height: 450px;
+  height: 500px;
   border: 2px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
   color: #ffffff;
@@ -23,6 +23,7 @@ section{
   padding: 30px 40px;
   align-items: center;
   margin: 30px 0;
+  justify-content: center;
 }
 
 .container h2 {
@@ -34,11 +35,11 @@ section{
 
 .container .input-box {
   position: relative;
-  width: 310px;
+  width: 340px;
   margin: 30px 0px;
   border-bottom: 2px solid #ffffff;
 }
-.input-box input {
+.contact-input {
   width: 100%;
   height: 50px;
   background: transparent;
@@ -68,7 +69,7 @@ section{
   transform: translateY(-50%);
   font-size: 20px;
 }
- .container .message-control {
+ .container .message-box {
   right: 20px;
   top: 50%;
   font-size: 20px;
@@ -78,9 +79,9 @@ section{
   font-size: 20px;
   font-family: system-ui;
   padding: 20px 45px 20px 20px;
-  margin-bottom: 1rem;
+  margin: 10px 0;
  }
-.container .btn {
+.container .contact-btn {
   display: inline-block;
   padding: 0.35em 1.2em;
   border: 0.1em solid #FFFFFF;
@@ -94,7 +95,7 @@ section{
   text-align: center;
   transition: all 0.2s;
 }
-.container .btn:hover{
+.container .contact-btn:hover{
   color: #ffffff;
   background-color: #000000;
 }
