--- a/src/Pages/clientLoginStyle.css
+++ b/src/Pages/clientLoginStyle.css
@@ -60,6 +60,7 @@
     margin-bottom: 5px;
     font-weight: bold;
     display: flex;
+    color: #000000;
 }
 
 .client-login-container .login-input {
