--- a/src/Components/ContactForm.css
+++ b/src/Components/ContactForm.css
@@ -10,7 +10,7 @@ section{
   width: 100%;
 
 }
-.container {
+.container  {
   position: relative;
   display: flex;
   width: 420px;
@@ -25,6 +25,11 @@ section{
   margin: 30px 0;
   justify-content: center;
 }
+.form-box{
+  padding: 30px;
+  /* display: flex; */
+  flex-wrap: wrap;
+}
 
 .container h2 {
   font-size: 30px;
@@ -38,6 +43,7 @@ section{
   width: 340px;
   margin: 30px 0px;
   border-bottom: 2px solid #ffffff;
+  flex: 1 0 5rem;
 }
 .contact-input {
   width: 100%;
@@ -80,6 +86,7 @@ section{
   font-family: system-ui;
   padding: 20px 45px 20px 20px;
   margin: 10px 0;
+  flex: 1 0 5rem;
  }
 .container .contact-btn {
   display: inline-block;
@@ -94,6 +101,7 @@ section{
   color: #ffffff;
   text-align: center;
   transition: all 0.2s;
+  flex: 1 0 5rem;
 }
 .container .contact-btn:hover{
   color: #ffffff;
