--- a/src/Components/NavbarStyle.css
+++ b/src/Components/NavbarStyle.css
@@ -4,15 +4,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 30px;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 15px 15px 0 rgba(16, 0, 0, 0.25);
   width: 95%;
   height: 80px;
   border-radius: 13px;
   position: fixed;
   top: 20px;
-  left: 50px;
-  transform: translate(-5%);
+  left: 50%;
+  transform: translate(-50%);
   z-index: 9999;
+
 }
 
 .navbar-logo {
