--- a/src/Components/formInput.css
+++ b/src/Components/formInput.css
@@ -1,5 +1,5 @@
 .formInput{
-    display: flex;
+    display:flex;
     flex-direction: column;
     width: 280px;
 }
@@ -14,18 +14,20 @@ input{
 
 label{
     font-size: 12px;
-    color: gray;
+    color: rgb(163, 163, 163);
 }
 
-span{
+.forminput-span{
     font-size: 12px;
     padding: 3px;
-    color: red;
+    color: rgb(118, 0, 0);
     display: none;
 }
 
 input:invalid[focused="true"]{
-    border: 1px solid red;
+    border: 1px solid rgb(179, 96, 96);
+    background: #ce8e8e;
+    
 }
 
 input:invalid[focused="true"] ~ span{
