--- a/src/display.css
+++ b/src/display.css
@@ -3,28 +3,32 @@
   height: 100%;
   width: 100%;
   font-family: "Source Sans Pro", sans-serif;
+  overflow-y: auto;
 }
 
 .display-app {
+  height: 100%;
+  width: 100%;
   display: flex;
-  position: relative;
+  position: fixed;
+  flex-direction: row;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
+/* Track *//*
 ::-webkit-scrollbar-track {
   background: #e0e0e0;
 }
 
-/* Handle */
+/* Handle *//*
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
 
-/* Handle on hover */
+/* Handle on hover *//*
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
+} */
