--- a/src/Pages/clientLoginStyle.css
+++ b/src/Pages/clientLoginStyle.css
@@ -7,7 +7,7 @@
     background-image: url('../assets/7.jpg');
     background-size: cover;
     height: 110vh;
-    color: #000000;
+    color: #1E212D;
 }
 .client-login-container h2{
     position: absolute;
@@ -21,7 +21,7 @@
     align-items: center;
     width: 400px;
     height: 350px;
-    background-color: transparent;
+    background-color: #e0e1dd;
     backdrop-filter: blur(10px);
     padding: 20px;
     border-radius: 10px;
@@ -60,7 +60,7 @@
     margin-bottom: 5px;
     font-weight: bold;
     display: flex;
-    color: #000000;
+    color: #1E212D;
 }
 
 .client-login-container .login-input {
@@ -73,6 +73,10 @@
     box-sizing: border-box;
     font-size: 14px;
     background: transparent;
+}
+.login-input:hover{
+    border: 0.1em solid #000000;
+    border-radius: 4px;
 }
 .client-login-container .login-a{
     color: #000000;
@@ -101,8 +105,9 @@
     color: #ffffff;
     background-color: #000000;
   }
+
   @media all and (max-width:30em){
-    .btn{
+    .login-btn{
         display: block;
         margin: 0.4em auto;
     }
@@ -123,6 +128,13 @@ display: inline-block;
 */
 .forgot-password {
     margin-top: 10px;
-    text-align: center;
     font-size: 14px;
+    display: flex;
+    color: #B68973;
+}
+.forgot-password:hover{
+    color: #1E212D;
+}
+.login-input::placeholder{
+    color: #1E212D;
 }
