main website css change and connecting update dashboard

--- a/src/Components/FooterStyles.css
+++ b/src/Components/FooterStyles.css
@@ -59,4 +59,13 @@
   .bottom div {
     width: 50%;
   }
+
+  .bottom a {
+    display: none;
+  }
+
+  .bottom {
+    display: flex;
+    flex-direction: column;
+  }
 }
