--- a/src/Components/AboutUsStyles.css
+++ b/src/Components/AboutUsStyles.css
@@ -1,5 +1,5 @@
 .about-container {
-  margin: 4rem 6rem;
+  margin: 100px;
   text-align: start;
 }
 
@@ -9,6 +9,14 @@
 
 @media screen and (max-width: 850px) {
   .about-container {
-    margin: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+  align-items: start;
+  margin: 0px !important;
+  padding: 40px;
+  }
+
+  .about-container p {
+    text-align: justify;
   }
 }
