--- a/src/Components/DestinationStyles.css
+++ b/src/Components/DestinationStyles.css
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 4.5rem;
+  text-align: justify;
 }
 
 .first-des-reverse {
