--- a/src/Components/NavbarStyle.css
+++ b/src/Components/NavbarStyle.css
@@ -77,6 +77,12 @@ button:hover {
   .NavbarItems {
     z-index: 99;
   }
+
+  .navbar-logo {
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -104,11 +110,14 @@ button:hover {
     display: block;
     width: 100%;
     font-size: 1.2rem;
-    padding: 2rem 0;
+    padding: 1.5rem 0;
+    color: black;
   }
   .nav-links:hover {
-    background-color: #01959a;
-    transition: none; /* Adjusted property name */
+    background-color: #778da9;
+    color: #0d1b2a;
+    border-radius: 4px;
+    transition: all 0.2s ease-in-out;
   }
   button {
     display: none;
@@ -122,7 +131,6 @@ button:hover {
     width: 80%;
     background: #01959a;
     text-decoration: none;
-    color: #fff;
     font-size: 1.2rem;
     font-weight: 700;
     letter-spacing: 2px;
