--- a/src/css/LoginStyles.css
+++ b/src/css/LoginStyles.css
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     /*margin-top: 100px;*/
-    background-image: url('../assets/7.jpg');
     background-size: cover;
     height: 110vh;
     color: #1E212D;
@@ -22,7 +21,8 @@
     align-items: center;
     width: 400px;
     height: 350px;
-    backdrop-filter: blur(15px);
+    background-color: #000000;
+    backdrop-filter: blur(10px);
     padding: 20px;
     border-radius: 10px;
     align-items: center;
@@ -78,13 +78,12 @@
     color: #ffffff;
 }
 
-.login-btn {
-    display: block;
+.client-login-container .login-btn {
     padding: 0.35em 1.2em;
-    background-color: #000000;
+    background-color: transparent;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
-    color: #f7f5f5;
+    color: #000000;
     border: 0.1em solid #000000;
     border-radius: 4px;
     cursor: pointer;
@@ -96,8 +95,8 @@
     margin: 5px;
 }
 .login-btn:hover{
-    color: #000000;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #000000;
   }
 
   @media all and (max-width:30em){
