--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,6 @@
 .App {
   text-align: center;
   background-color: #e0e1dd;
+  color: black;
 }
 /* https://colorkit.co/palette/161A30-4d4f5e-3f4056-383852-31304D-5a5a6c-6f6f7c-83838b-bab8b8-F0ECE5/ */
