--- a/src/Components/AboutUsStyles.css
+++ b/src/Components/AboutUsStyles.css
@@ -11,7 +11,7 @@
   .about-container {
     display: flex;
     flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin: 0px !important;
   padding: 40px;
   }
