--- a/src/Pages/clientLoginStyle.css
+++ b/src/Pages/clientLoginStyle.css
@@ -14,9 +14,8 @@
     top: 130px;
     color: #ffffff;
 }
-.client-login-container .login-form {
+.login-form {
     display: flex;
-    position:relative;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -44,7 +43,7 @@
  */
 
 
-.client-login-container .form-group{
+.form-group{
     position: relative;
     width: 350px;
     margin: 5px;
@@ -100,12 +99,12 @@
     background-color: #ffffff;
   }
 
-  @media all and (max-width:30em){
+  /* @media all and (max-width:30em){
     .login-btn{
         display: block;
         margin: 0.4em auto;
     }
-    }
+    } */
 /*
 display: inline-block;
   padding: 0.35em 1.2em;
@@ -131,4 +130,17 @@ display: inline-block;
 }
 .login-input::placeholder{
     color: #1E212D;
+}
+
+@media screen and (max-width: 550px) {
+    .login-btn {
+        width: 250px;
+    }
+
+    .login-form {
+        width: 300px;
+    }
+    .form-group {
+        width: 250px;
+    }
 }
